# openapi/ai-interactions.yml
@@ -27,9 +27,16 @@ components:
           type: string
         applicationName:
           type: string
+        interactionMode:
+          $ref: "#/components/schemas/InteractionMode"
+          default: NORMAL
       required:
         - interactionId
         - interactionDate
+        - applicationName
+        - interfaceName
+        - methodName
+        - interactionMode
     InteractionStartedEvent:
       allOf:
         - $ref: "#/components/schemas/InteractionEvent"
@@ -51,7 +58,23 @@ components:
     UUID:
       type: string
       format: uuid
-      pattern: "[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}"
+    InteractionScore:
+      type: object
+      properties:
+        interactionId:
+          $ref: "#/components/schemas/UUID"
+        interactionDate:
+          $ref: "#/components/schemas/Instant"
+        scoreDate:
+          $ref: "#/components/schemas/Instant"
+        score:
+          type: number
+          format: double
+    InteractionMode:
+      type: string
+      enum:
+        - NORMAL
+        - RESCORE
 paths:
   /ai/interaction:
     post:
@@ -62,8 +85,14 @@ paths:
             schema:
               $ref: "#/components/schemas/InteractionEvent"
       responses:
+        "200":
+          description: Successful response for an InteractionCompletedEvent
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/InteractionScore"
         "204":
-          description: Success
+          description: Successful response for an InteractionStartedEvent
         "400":
           description: Bad Request
         "500":
@@ -71,7 +100,7 @@ paths:
       summary: Post AI Interaction Event
       operationId: submitInteractionEvent
       tags:
-        - AI Interaction
+        - AIInteraction
 info:
   title: AI Interactions
   version: "1.0"
